eks-cilium/components/manifests/demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: deathstar
  namespace: cilium-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    org: empire
    class: deathstar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deathstar
  namespace: cilium-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      org: empire
      class: deathstar
  template:
    metadata:
      labels:
        org: empire
        class: deathstar
    spec:
      containers:
        - name: deathstar
          image: docker.io/cilium/starwars:v2.1
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiefighter
  namespace: cilium-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      org: empire
      class: tiefighter
  template:
    metadata:
      labels:
        org: empire
        class: tiefighter
    spec:
      containers:
        - name: spaceship
          image: docker.io/tgraf/netperf:v1.0
          command: ["sh", "-c", "while true; do sleep 3600; done"]
          resources:
            limits:
              cpu: "100m"
              memory: "64Mi"
            requests:
              cpu: "10m"
              memory: "32Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smuggler
  namespace: cilium-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      org: neutral
      class: smuggler
  template:
    metadata:
      labels:
        org: neutral
        class: smuggler
    spec:
      containers:
        - name: spaceship
          image: docker.io/tgraf/netperf:v1.0
          command: ["sh", "-c", "while true; do sleep 3600; done"]
          resources:
            limits:
              cpu: "100m"
              memory: "64Mi"
            requests:
              cpu: "10m"
              memory: "32Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwing
  namespace: cilium-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      org: alliance
      class: xwing
  template:
    metadata:
      labels:
        org: alliance
        class: xwing
    spec:
      containers:
        - name: spaceship
          image: docker.io/tgraf/netperf:v1.0
          command: ["sh", "-c", "while true; do sleep 3600; done"]
          resources:
            limits:
              cpu: "100m"
              memory: "64Mi"
            requests:
              cpu: "10m"
              memory: "32Mi"
